--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <div class="container clearfix">
-    <div class="grid_4">
+   <!--  <div class="grid_4">
       <img src="img/logo.gif" alt="Smells Like Bakin">
     </div>
-
-    <div class="grid_8 omega">
+ -->
+    <div class="grid_12">
       <ul class="nav">
         <li><a href="#">About</a></li>
         <li><a href="#">Cupcakes &amp; Prices</a></li>
@@ -23,14 +23,16 @@
       </ul>
     </div>
 
-    <div id="intro" class="grid_9">
+    <div id ="logo">
+      <img src="img/you-bake-me-blush.gif" alt="You Bake me Blush">
+    </div>
+
+    <div id="intro" class="grid_12">
       <h1>Opposites really do attract, especially in our kitchen! We combine unexpected flavors that melt together to create ironically delicious desserts.</h1>
       <p><a href="#" class="btn">Browse Our Cupcakes</a></p>
     </div>
     
-    <div class="grid_3 omega">
-      <img src="img/you-bake-me-blush.gif" alt="You Bake me Blush">
-    </div>
+  
     
     <div id="featured-cupcake" class="grid_7">
       <h2>Cupcake of the Week</h2>
